--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "webpack-merge": "^5.1.3"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "emotion": "^10.0.27",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
